k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: crud-backend
  labels:
    app: crud-backend
spec:
  replicas: 2  # dos réplicas para alta disponibilidad
  selector:
    matchLabels:
      app: crud-backend
  template:
    metadata:
      labels:
        app: crud-backend
    spec:
      containers:
        - name: crud-backend
          image: crud-backend:dev
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "64Mi"
              cpu: "50m"
            limits:
              memory: "128Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 5
